<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.help.tabs.PlaystyleHelpFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cluster_help_p1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Point Guards"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cluster_help_p2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Shooting Guards"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cluster_help_p3"
            android:textSize="24sp" />

        <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Small Forwards"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cluster_help_p4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Power Forwards"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cluster_help_p5"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Centers"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cluster_help_p6"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>